# space-reversing

./: .gitignore  CActorEntity.struct.h  P4_SRC_PATHS.txt  actor-track.js  actorInfo.js  actor_action_dump.js  actor_status.js  ai_weapons.js  ammoDump.c  ammoDump.js  ammocontainer.js  build-injector.sh  build-struct-register-dump.sh  build.sh  cactorentity_dump_factory.js  cactorentity_hook.js  callFuncWithRax64.S  camera-dump-static.js  camera-dump.js  caminfo.js  caminfo2.js  centity_onbeforespawn.js  centityx-weapons.js  centityx.js  chealth.c  chealth.js  comp_track.js  compdump.js  computeTotalBodyDamage.js  console.js  contactshader.js  datacore-final.js  datacore-min.js  datacore-structs-ida-typelib.i  datacore-structs.h  datacore.js  datacore2.js  datacore2b.js  datacore3.js  datacore4.js  (+120 more)
decomp-reference/: AdjustActorStat_dump_callers1_callees0.c  CEntityClassRegistry__FindClass_dump_callers1_callees5.c  CEntityClassRegistry__RegisterEntityClasses_dump_callers1_callees4.c  CEntityComponentIFCS__PrePhysicsUpdate_dump_callers0_callees1.c  CEntityComponentIFCS__PrePhysicsUpdate_dump_callers1_callees2.c  CEntitySystem__DumpDebugInfo_dump_callers0_callees2.c  CEntity__ChangeOwnerEntity_dump_callers0_callees1.c  CEntity__ChangeOwnerEntity_dump_callers0_callees2.c  CEntity__ChangeOwnerEntity_dump_callers0_callees3.c  CPhysicalEntity__ComputeBBox_dump_callers0_callees2.c  CSCBodyHealthComponent__ProcessHit_dump_callers1_callees4.c  DataCore__GetStructFieldPointers_dump_callers0_callees2.c  HandleFetchShipDataResult_dump_callers0_callees1.c  HandleFetchShipDataResult_dump_callers1_callees8.c  SWeaponStats__Init_dump_callers0_callees4.c  WorldToScreen_dump_callers1_callees5.c  datacore_struct_dump.js  display_camera_and_location_info_dump_callers0_callees3.c  initializeEpicOnlineServices_dump_callers1_callees4.c  multi_dump_CRigidEntity__Action_etc_callers0_callees1.c  multi_dump___1IDataCore@@UEAA@XZ_etc_callers0_callees2.c  multi_dump___1IDataCore@@UEAA@XZ_etc_callers0_callees4.c  multi_dump_sub_1400B67F0_etc_callers0_callees2.c  multi_dump_sub_1400B69B0_etc_callers0_callees6.c  multi_dump_sub_1400BF6E0_etc_callers0_callees0.c  multi_dump_sub_1400E8480_etc_callers0_callees1.c  multi_dump_sub_1400E8480_etc_callers0_callees2.c  multi_dump_sub_1400E9230_etc_callers1_callees3.c  multi_dump_sub_1401895C0_etc_callers0_callees2.c  multi_dump_sub_140190B40_etc_callers0_callees3.c  multi_dump_sub_140195880_etc_callers0_callees1.c  multi_dump_sub_14024B820_etc_callers0_callees1.c  multi_dump_sub_14028EF10_etc_callers0_callees0.c  multi_dump_sub_1402AD800_etc_callers0_callees0.c  multi_dump_sub_1402C17A0_etc_callers0_callees0.c  (+131 more)
nav-rs/: Cargo.toml  objContainers.json  pois.json  readme.md
nav-rs/src/: brute_test.rs  coordinate_transform.rs  data_loader.rs  lib.rs  main.rs  nav_core.rs  nav_planner.rs  smoke_test.rs  types.rs  vector3.rs
nav-server-rs/: Cargo.toml  Dockerfile  objContainers.json  pois.json
nav-server-rs/src/: main.rs
unforge/: Cargo.toml
unforge/src/: main.rs
(+272 files in other folders)
