[package]
name = "nav_system"
version = "0.1.0"
edition = "2021"
authors = ["Star Citizen Navigation Team"]
description = "A comprehensive navigation system for celestial navigation"
license = "MIT"
repository = "https://github.com/sc-nav/nav-system"

[dependencies]
log = "0.4"
env_logger = "0.9"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "2.33"

[dev-dependencies]
tempfile = "3.3"

[[bin]]
name = "nav_system_cli"
path = "src/main.rs"

[lib]
name = "nav_system"
path = "src/lib.rs"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
strip = true