[package]
name = "starnav"
version = "0.1.2"
edition = "2021"
authors = ["Kenan Sulayman <sc_nav@ci.ax>"]
description = "A comprehensive navigation system for celestial navigation in Star Citizen"
license = "MIT"
readme="readme.md"
repository = "https://github.com/19h/space-reversing/tree/master/nav-rs"

[dependencies]
log = "0.4"
env_logger = "0.9"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "2.33"

[dev-dependencies]
tempfile = "3.3"

[[bin]]
name = "nav_system_cli"
path = "src/main.rs"

[lib]
name = "starnav"
path = "src/lib.rs"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
strip = true